# MLtools

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
nb/: adding-custom-dataset.ipynb  preprocessing-with-ML-tools.ipynb
projects/boulder_segment/: train.py
projects/boulder_segment/configs/: default_config.yml  sweep_config.yml  sweep_config_optimizer.yml
projects/bouldering/: train_net.py  train_net_function.py
projects/bouldering/bouldering/: config.py  custom_datasets.py  dataset_mapper.py  defaults.py  evaluator.py  solver.py
projects/pollen/: train_net.py
projects/pollen/pollen/: __init__.py  arg_parser.py  custom_datasets.py  dataset_mapper.py  evaluator.py
resources/nb/: DOWNLOAD_DATA_BOULDERING.ipynb  GETTING_STARTED.ipynb  INFERENCE_BOULDERING.ipynb  PREPROCESSING_BOULDERING.ipynb  TRAINING_BOULDERING.ipynb
resources/nb/.ipynb_checkpoints/: DOWNLOAD_DATA_BOULDERING-checkpoint.ipynb  GETTING_STARTED-checkpoint.ipynb
src/MLtools/: create_annotations.py  create_annotations_mask.py  inference.py  misc.py  plotting.py  training.py
