[build-system]
requires = ["affine>=2.4.0",
            "albumentations>=1.3.1",
            "geopandas>=0.13.2",
            "imantics>=0.1.12",
            "matplotlib>=3.7.1",
            "numpy>=1.24.3",
            "pandas>=2.0.2",
            "opencv_python>=4.8.0.74",
            "Pillow>=9.5.0",
            "pycocotools>=2.0.6",
            "pyproj>=3.6.0",
            "PyYAML>=6.0.1",
            "rasterio>=1.3.7",
            "scikit-image>=0.21.0",
            "setuptools>=58.1.0",
            "tabulate>=0.9.0",
            "tqdm>=4.65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MLtools_BOULDERING"
version = "0.0.1"
license = {file = "LICENSE.txt"}
authors = [
  { name="Nils C. Prieur", email="prieur.nils@gmail.com" },
]
description = "Repository that gathers multiple tools for machine learning application (pre-processing, training, inference, visualization of results and more...)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/astroNils/MLtools"
"Bug Tracker" = "https://github.com/astroNils/MLtools/issues"
